# TCopy

./: CMakeLists.txt  README.md
src/: DBFile.cpp  DBFile.h  FileSyncApp.cpp  FileSyncApp.h  FileSyncDB.cpp  FileSyncDB.h  FileSyncEvent.cpp  FileSyncEvent.h  FileSyncRegistery.cpp  FileSyncRegistery.h  FileSync_precomp.h  Manager.cpp  TCopyApp.cpp  TCopyApp.h  TCopyDB.cpp  TCopyDB.h  wxDirDlgButton.cpp  wxDirDlgButton.h  wxDirPicker.cpp  wxDirPicker.h  wxDirTextCtrl.cpp  wxDirTextCtrl.h  wxExtensionsStaticBox.cpp  wxExtensionsStaticBox.h  wxFileStaticBox.cpp  wxFileStaticBox.h  wxMainFrame.cpp  wxMainFrame.h  wxPanelBase.cpp  wxPanelBase.h  wxPanelMain.cpp  wxPanelMain.h  wxPanelStart.cpp  wxPanelStart.h
src/DB/: File.cpp  File.h  Manager.cpp  Manager.h
src/GUI/: DirPicker.cpp  DirPicker.h  DirTextCtrl.cpp  DirTextCtrl.h  ExtensionFilterEvent.cpp  ExtensionFilterEvent.h  ExtensionsStaticBox.cpp  ExtensionsStaticBox.h  FileStaticBox.cpp  FileStaticBox.h  MainFrame.cpp  MainFrame.h  PanelBase.cpp  PanelBase.h  PanelMain.cpp  PanelMain.h  PanelStart.cpp  PanelStart.h  StaticBoxBase.cpp  StaticBoxBase.h
src/gui/: DirPicker.cpp  DirPicker.h  DirTextCtrl.cpp  ExtensionFilterEvent.cpp  ExtensionsStaticBox.cpp  ExtensionsStaticBox.h  FileStaticBox.cpp  FileSyncEvent.cpp  PanelMain.h  wxDirPicker.cpp  wxDirPicker.h  wxDirTextCtrl.cpp  wxDirTextCtrl.h  wxExtensionsStaticBox.cpp  wxFileStaticBox.cpp  wxFileStaticBox.h  wxMainFrame.cpp  wxMainFrame.h  wxPanelBase.cpp  wxPanelBase.h  wxPanelMain.cpp  wxPanelMain.h  wxPanelStart.cpp  wxPanelStart.h
vcpkg/: vcpkg.cmake  vcpkg.json
